--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/kiss-icp"]
-	path = src/kiss-icp
-	url = https://github.com/PRBonn/kiss-icp
+[submodule "covins"]
+	path = covins
+	url = https://github.com/EmmanuelMess/covins
