Create basic working example with EuRoC

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "VINS-COVINS-adaptation"]
 	path = VINS-COVINS-adaptation
 	url = https://github.com/manthan99/VINS-COVINS-adaptation.git
+[submodule "ccm_slam"]
+	path = ccm_slam
+	url = https://github.com/VIS4ROB-lab/ccm_slam.git
